# gothel

./: .gitignore  .gitmodules  CLAUDE.md  main.py  plan-ieltsReadingTraining.prompt.md  pyproject.toml
.claude/: CLAUDE_TEMPLATE.md
DTO/: Assistant.py  CLAUDE.md  EvidenceProblem.py  FlashlightProblem.py  MCQuestion.py  ReadingContent.py  User.py
auth/: auth.py
model/: Base.py  CLAUDE.md  EvidenceProblem.py  FlashlightProblem.py  MCQuestion.py  Question.py  ReadingContent.py  User.py  __init__.py
router/: Assistant.py  CLAUDE.md  EvidenceProblem.py  FlashlightProblem.py  ReadingContent.py  User.py
script/: CLAUDE.md  __init__.py  create_admin.py  evidence_data_gen.py  gen_real_evidence_data.py  gen_real_flashlight_data.py  reset.py  reset_all.py  user_gen.py
