[project]
name = "gothel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.124.4",
    "pyjwt>=2.8.0",
    "passlib[argon2,bcrypt]>=1.7.4",
    "sqlalchemy>=2.0.45",
    "pydantic>=2.12.5",
    "openai>=1.59.7",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "faker>=39.0.0",
    "python-dotenv>=1.2.1",
]
